# wscpp

./: CMakeLists.txt
config/: deps.cmake  install.cmake  wscpp.cmake
include/: CoreApplication.hpp  Object.hpp
resources/: upload.html
src/: CoreApplication.cpp  Object.cpp  env.cpp  main.cpp  upload-qt.cpp  upload.cpp
